--- a/env.example
+++ b/env.example
@@ -37,3 +37,10 @@ STORAGE_BASE_URL=https://storage.example.com
 # Webhook settings
 WEBHOOK_TIMEOUT=30
 WEBHOOK_RETRY_ATTEMPTS=3
+
+# S3 settings for flow segment storage
+S3_ENDPOINT_URL=http://localhost:9000
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin
+S3_BUCKET_NAME=tams-segments
+S3_USE_SSL=false
