--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,34 @@
-fastapi
-uvicorn[standard]
-pydantic
-pydantic-settings
-python-multipart
-python-dotenv
-alembic
-psycopg2-binary
-redis
-httpx
-pytest
-pytest-asyncio
-# VAST database dependencies
-vastdb
-ibis
-pandas
-pyarrow
-boto3 
+# FastAPI and web framework
+fastapi>=0.115.7
+uvicorn[standard]>=0.34.0
+python-multipart>=0.0.20
+
+# Data validation and settings
+pydantic>=2.10.0
+pydantic-settings>=2.1.0
+
+# Environment and configuration
+python-dotenv>=1.1.1
+
+# Database and ORM
+alembic>=1.13.1
+psycopg2-binary==2.9.9
+
+# Caching and HTTP
+redis==5.0.1
+httpx>=0.28.1
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# VAST database and analytics
+vastdb>=1.3.10
+
+# AWS/S3 storage
+boto3>=1.35.0
+botocore>=1.35.0
+
+# Additional utilities
+python-dateutil>=2.8.2
+pytz>=2025.2
