--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ uvicorn[standard]>=0.34.0
 python-multipart>=0.0.20
 
 # Data validation and settings
-pydantic>=2.10.0
+pydantic>=2.10.0,<3.0.0
 pydantic-settings>=2.1.0
 
 # Environment and configuration
@@ -24,6 +24,9 @@ pytest-asyncio==0.21.1
 
 # VAST database and analytics
 vastdb>=1.3.10
+ibis>=10.0.0
+pyarrow>=15.0.0
+pandas>=2.0.0
 
 # AWS/S3 storage
 boto3>=1.35.0
