--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,10 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 
 # VAST database and analytics
-vastdb>=1.3.10
-ibis>=10.0.0
-pyarrow>=15.0.0
-pandas>=2.0.0
+vastdb
+ibis
+pyarrow
+pandas
 
 # AWS/S3 storage
 boto3>=1.35.0
