--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,15 @@ botocore>=1.35.0
 # Additional utilities
 python-dateutil>=2.8.2
 pytz>=2025.2
+
+# Telemetry and Observability
+prometheus-client
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-httpx
+opentelemetry-instrumentation-logging
+opentelemetry-exporter-prometheus
+opentelemetry-exporter-jaeger
+opentelemetry-exporter-otlp-proto-http
+psutil
