--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,49 @@
 # FastAPI and web framework
-fastapi>=0.115.7
-uvicorn[standard]>=0.34.0
-python-multipart>=0.0.20
+fastapi==0.115.14
+uvicorn[standard]==0.34.3
+python-multipart==0.0.20
 
 # Data validation and settings
-pydantic>=2.10.0,<3.0.0
-pydantic-settings>=2.1.0
+pydantic==2.11.7
+pydantic-settings==2.10.1
 
 # Environment and configuration
-python-dotenv>=1.1.1
+python-dotenv==1.1.1
 
 # Database and ORM
-alembic>=1.13.1
+alembic==1.16.2
 psycopg2-binary==2.9.9
 
 # Caching and HTTP
 redis==5.0.1
-httpx>=0.28.1
+httpx==0.28.1
 
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 
 # VAST database and analytics
-vastdb
-ibis
-pyarrow
-pandas
+vastdb==1.3.10
+ibis==3.3.0
+pyarrow==16.1.0
+pandas==2.3.0
 
 # AWS/S3 storage
-boto3>=1.35.0
-botocore>=1.35.0
+boto3==1.38.46
+botocore==1.38.46
 
 # Additional utilities
-python-dateutil>=2.8.2
-pytz>=2025.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
 
 # Telemetry and Observability
-prometheus-client
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-instrumentation-fastapi
-opentelemetry-instrumentation-httpx
-opentelemetry-instrumentation-logging
-opentelemetry-exporter-prometheus
-opentelemetry-exporter-jaeger
-opentelemetry-exporter-otlp-proto-http
-psutil
+prometheus-client==0.22.1
+opentelemetry-api==1.35.0
+opentelemetry-sdk==1.35.0
+opentelemetry-instrumentation-fastapi==0.56b0
+opentelemetry-instrumentation-httpx==0.56b0
+opentelemetry-instrumentation-logging==0.56b0
+opentelemetry-exporter-prometheus==0.56b0
+opentelemetry-exporter-jaeger==1.21.0
+opentelemetry-exporter-otlp-proto-http==1.15.0
+psutil==7.0.0
