feat: Add telemetry integration with existing Kubernetes configuration
- Update deployment.yaml with telemetry environment variables
- Add telemetry settings to configmap.yaml
- Add Prometheus annotations to service.yaml
- Create apply-telemetry.sh script for easy deployment
- Add comprehensive TELEMETRY.md documentation
- Enable minimal telemetry integration with existing K8s setup
- Maintain compatibility with existing health checks and probes
- Add service annotations for Prometheus scraping

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -19,5 +19,10 @@ data:
       "log_format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s",
       "health_check_path": "/health",
       "health_check_interval": "30s",
-      "health_check_timeout": "10s"
+      "health_check_timeout": "10s",
+      "telemetry_enabled": true,
+      "metrics_enabled": true,
+      "tracing_enabled": true,
+      "jaeger_endpoint": "jaeger-collector:14268",
+      "otlp_endpoint": "http://otel-collector:4318/v1/traces"
     } 
