--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: tams
   labels:
     app: tams-api
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/metrics"
+    prometheus.io/port: "8000"
 spec:
   type: ClusterIP
   ports:
