--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 fastapi==0.115.14
 uvicorn[standard]==0.34.3
 python-multipart==0.0.20
+starlette==0.45.2
 
 # Data validation and settings
 pydantic==2.11.7
@@ -9,6 +10,7 @@ pydantic-settings==2.10.1
 
 # Environment and configuration
 python-dotenv==1.1.1
+click==8.1.7
 
 # Database and ORM
 alembic==1.16.2
@@ -21,6 +23,7 @@ httpx==0.28.1
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-cov==4.1.0
 
 # VAST database and analytics
 vastdb==1.3.10
@@ -35,6 +38,8 @@ botocore==1.38.46
 # Additional utilities
 python-dateutil==2.9.0.post0
 pytz==2025.2
+deprecated==1.2.14
+six==1.16.0
 
 # Telemetry and Observability
 prometheus-client==0.22.1
