--- a/.gitignore
+++ b/.gitignore
@@ -193,3 +193,9 @@ cython_debug/
 .cursorignore
 .cursorindexingignore
 .cursor*
+
+# Temporary test files
+.s3cfg
+test_video.mp4
+test_output/
+*.mp4
