--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,31 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - VAST_DATA_DIR=/app/vast_data
-      - LOG_LEVEL=INFO
+      # Server settings
+      - HOST=0.0.0.0
+      - PORT=8000
       - DEBUG=false
+      
+      # VAST Database settings
+      - VAST_ENDPOINT=http://172.200.204.90
+      - VAST_ACCESS_KEY=SRSPW0DQT9T70Y787U68
+      - VAST_SECRET_KEY=WkKLxvG7YkAdSMuHjFsZG5/BhDk9Ou7BS1mDQGnr
+      - VAST_BUCKET=jthaloor-db
+      - VAST_SCHEMA=tams
+      
+      # S3 settings
+      - S3_ENDPOINT_URL=http://172.200.204.91
+      - S3_ACCESS_KEY_ID=SRSPW0DQT9T70Y787U68
+      - S3_SECRET_ACCESS_KEY=WkKLxvG7YkAdSMuHjFsZG5/BhDk9Ou7BS1mDQGnr
+      - S3_BUCKET_NAME=jthaloor-s3
+      - S3_USE_SSL=false
+      
+      # Logging
+      - LOG_LEVEL=INFO
+      - LOG_FORMAT=%(asctime)s - %(name)s:%(lineno)d - %(levelname)s - %(message)s
+      
+      # App directories
+      - VAST_DATA_DIR=/app/vast_data
     volumes:
       - vast_data:/app/vast_data
     restart: unless-stopped
