Implement database-backed authentication system
- Added bcrypt, PyJWT, python-jose, and passlib to requirements.txt
- Updated BasicAuthProvider to use VAST database for user authentication
  - Password hashing with bcrypt
  - Database-first authentication with fallback to in-memory
  - User creation and management methods
- Updated URLTokenProvider to use database for API token storage
  - Token persistence in api_tokens table
  - Database-first token validation with fallback
- Updated auth dependencies to inject VAST store into providers
- Added ApiToken.token_hash field to model
- Created test script for database authentication validation

Features:
- Secure password hashing with bcrypt
- Database persistence for users and API tokens
- Fallback to in-memory auth for development
- User and token management capabilities

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,12 @@ starlette==0.45.2
 pydantic==2.11.7
 pydantic-settings==2.10.1
 
+# Authentication and security
+bcrypt==4.1.2
+PyJWT==2.8.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
 # Environment and configuration
 python-dotenv==1.1.1
 click==8.1.7
