--- a/env.example
+++ b/env.example
@@ -38,6 +38,7 @@ S3_ACCESS_KEY_ID=minioadmin
 S3_SECRET_ACCESS_KEY=minioadmin
 S3_BUCKET_NAME=tams-segments
 S3_USE_SSL=false
+S3_PRESIGNED_URL_TIMEOUT=3600
 
 # Telemetry and Observability
 JAEGER_ENDPOINT=localhost:14268
