--- a/env.example
+++ b/env.example
@@ -13,7 +13,7 @@ VAST_ENDPOINT=http://localhost:8080
 VAST_ACCESS_KEY=test-access-key
 VAST_SECRET_KEY=test-secret-key
 VAST_BUCKET=tams-bucket
-VAST_SCHEMA=tams-schema
+VAST_SCHEMA=tams7
 
 # Logging
 LOG_LEVEL=INFO
