--- a/docker/docker.env
+++ b/docker/docker.env
@@ -11,7 +11,7 @@ VAST_ENDPOINT=http://172.200.204.90
 VAST_ACCESS_KEY=SRSPW0DQT9T70Y787U68
 VAST_SECRET_KEY=WkKLxvG7YkAdSMuHjFsZG5/BhDk9Ou7BS1mDQGnr
 VAST_BUCKET=jthaloor-db
-VAST_SCHEMA=tams
+VAST_SCHEMA=tams7
 
 # S3 settings for flow segment storage
 S3_ENDPOINT_URL=http://172.200.204.91
