FEAT: Add restore endpoint and fix soft delete field mapping - NOT TAMS compliant
- Added POST /sources/{sourceId}/restore endpoint for testing
- Fixed incorrect field names in soft_delete_record method (flow_id -> id, etc.)
- This commit preserves the experimental soft delete functionality
- Next commit will remove soft delete to make API TAMS compliant

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -6,8 +6,6 @@ python_functions = test_*
 addopts = 
     -v
     --tb=short
-    --strict-markers
-    --disable-warnings
     --strict-config
     --strict
 markers =
@@ -16,11 +14,15 @@ markers =
     unit: marks tests as unit tests
     mock: marks tests as mock tests
     real: marks tests as real integration tests
-    vastdbmanager: marks tests related to VastDBManager
+    performance: marks tests as performance tests
+    stress: marks tests as stress tests
+    scalability: marks tests as scalability tests
+    models: marks tests related to data models
     storage: marks tests related to storage operations
-    flows: marks tests related to flow management
-    auth: marks tests related to authentication
+    vastdbmanager: marks tests related to VastDBManager
     api: marks tests related to API endpoints
+    config: marks tests related to configuration
+    core: marks tests related to core functionality
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
