--- a/env.example
+++ b/env.example
@@ -33,12 +33,26 @@ WEBHOOK_TIMEOUT=30
 WEBHOOK_RETRY_ATTEMPTS=3
 
 # S3 settings for flow segment storage
-S3_ENDPOINT_URL=http://localhost:9000
-S3_ACCESS_KEY_ID=minioadmin
-S3_SECRET_ACCESS_KEY=minioadmin
-S3_BUCKET_NAME=tams-segments
+S3_ENDPOINT_URL=http://172.200.204.91
+S3_ACCESS_KEY_ID=SRSPW0DQT9T70Y787U68
+S3_SECRET_ACCESS_KEY=WkKLxvG7YkAdSMuHjFsZG5Ou7BS1mDQGnr
+S3_BUCKET_NAME=jthaloor-s3
 S3_USE_SSL=false
-S3_PRESIGNED_URL_TIMEOUT=3600
+
+# Presigned URL configuration - Runtime configurable
+S3_PRESIGNED_URL_UPLOAD_TIMEOUT=3600
+S3_PRESIGNED_URL_DOWNLOAD_TIMEOUT=3600
+
+# Storage backend configuration for get_urls
+DEFAULT_STORAGE_BACKEND_ID=default
+
+# get_urls configuration
+GET_URLS_MAX_COUNT=5
+
+# Storage API limits
+TAMS_FLOW_STORAGE_DEFAULT_LIMIT=10
+TAMS_SEGMENT_STORAGE_DEFAULT_LIMIT=10
+TAMS_ASYNC_DELETION_THRESHOLD=1000
 
 # Telemetry and Observability
 JAEGER_ENDPOINT=localhost:14268
