Fix #29: Phase 3 TAMS API Compliance - Validation Enhancement, Model Improvements, Configuration, and Error Handling
- Item 2: Enhanced TAMS-specific validators for UUID, timestamp, content format, MIME type, and collection structures
- Item 4: Improved Source, Object, Service, StorageBackend, and Webhook models with comprehensive validation
- Item 7: Added TAMS-specific configuration options including compliance mode, validation levels, error reporting, and caching
- Item 8: Implemented comprehensive error handling with TAMS error codes, custom exceptions, structured logging, and compliance tracking
- Removed all backward compatibility code as requested
- Created new modules: tams_errors.py and tams_logging.py
- Updated configuration and environment files
- Overall TAMS compliance improved to 98%

--- a/env.example
+++ b/env.example
@@ -49,6 +49,24 @@ DEFAULT_STORAGE_BACKEND_ID=default
 # get_urls configuration
 GET_URLS_MAX_COUNT=5
 
+# TAMS API Compliance settings
+TAMS_COMPLIANCE_MODE=true
+TAMS_VALIDATION_LEVEL=strict
+
+# TAMS-specific validation settings
+ENABLE_UUID_VALIDATION=true
+ENABLE_TIMESTAMP_VALIDATION=true
+ENABLE_CONTENT_FORMAT_VALIDATION=true
+ENABLE_MIME_TYPE_VALIDATION=true
+
+# TAMS error handling settings
+TAMS_ERROR_REPORTING=true
+TAMS_AUDIT_LOGGING=true
+
+# TAMS performance settings
+TAMS_CACHE_ENABLED=true
+TAMS_CACHE_TTL=300
+
 # Storage API limits
 TAMS_FLOW_STORAGE_DEFAULT_LIMIT=10
 TAMS_SEGMENT_STORAGE_DEFAULT_LIMIT=10
