feat: Implement table projections for improved query performance
- Add table projections configuration option (ENABLE_TABLE_PROJECTIONS)
- Update VAST store to create projections during table setup when enabled
- Create mgmt/create_table_projections.py script for projection management
- Update all environment files with new configuration option
- Add comprehensive projection definitions for all TAMS tables:
  * sources(id)
  * flows(id, source_id)
  * segments(id, flow_id, object_id, start_time, end_time)
  * objects(id)
  * flow_object_references(object_id, flow_id)
- Update documentation in README.md and environment files
- Projections provide significant performance improvements for large datasets
- Configuration can be enabled/disabled via environment variables

Resolves: Table projections implementation for TAMS API compliance

--- a/env.example
+++ b/env.example
@@ -49,6 +49,9 @@ DEFAULT_STORAGE_BACKEND_ID=default
 # get_urls configuration
 GET_URLS_MAX_COUNT=5
 
+# Table projections configuration for improved query performance
+ENABLE_TABLE_PROJECTIONS=false
+
 # TAMS API Compliance settings
 TAMS_COMPLIANCE_MODE=true
 TAMS_VALIDATION_LEVEL=strict
