--- a/docker/docker.env
+++ b/docker/docker.env
@@ -33,6 +33,9 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 WEBHOOK_TIMEOUT=30
 WEBHOOK_RETRY_ATTEMPTS=3
 
+# Table projections configuration for improved query performance
+ENABLE_TABLE_PROJECTIONS=false
+
 # Telemetry and Observability
 JAEGER_ENDPOINT=localhost:14268
 OTLP_ENDPOINT=http://localhost:4318/v1/traces
