Reorganize test directory structure for better maintainability
- Remove old scattered test files and consolidate into organized modules
- Create structured test directories: test_api/, test_core/, test_integration/, test_storage/, test_utils/
- Clean up deprecated test files and mock tests
- Update test configuration and runner scripts
- Improve test organization and reduce file sprawl
- Maintain test coverage while improving code structure

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,5 +1,5 @@
 [tool:pytest]
-testpaths = mock_tests real_tests
+testpaths = test_core test_storage test_api test_integration
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
@@ -8,15 +8,10 @@ addopts =
     --tb=short
     --strict-config
     --strict
+    --disable-warnings
 markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
-    mock: marks tests as mock tests
-    real: marks tests as real integration tests
-    performance: marks tests as performance tests
-    stress: marks tests as stress tests
-    scalability: marks tests as scalability tests
     models: marks tests related to data models
     storage: marks tests related to storage operations
     vastdbmanager: marks tests related to VastDBManager
@@ -27,3 +22,11 @@ filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
     ignore::UserWarning
+    ignore::pydantic.warnings.PydanticDeprecatedSince20
+    ignore:.*Using extra keyword arguments on `Field` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20
+    ignore:.*Support for class-based `config` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20
+    ignore:.*Type google\._upb\._message\.MessageMapContainer uses PyType_Spec.*:DeprecationWarning
+    ignore:.*Type google\._upb\._message\.ScalarMapContainer uses PyType_Spec.*:DeprecationWarning
+    ignore:.*exclusiveMinimum.*:pydantic.warnings.PydanticDeprecatedSince20
+    ignore:.*
+    ignore:.*env.*:pydantic.warnings.PydanticDeprecatedSince20
