fix: Correct environment variable configuration for debug mode
- Fix DEBUG mode issue: was using 'DEBUG=true' instead of 'TAMS_DEBUG=false'
- Update .env.example with correct environment variable names
- Environment variables with explicit env= parameters don't need TAMS_ prefix
- Variables without explicit env= parameters use TAMS_ prefix automatically
- Debug mode now correctly defaults to False for production safety
- Log level correctly set to INFO

The server was running in DEBUG mode because the .env file had 'DEBUG=true'
but the config expects 'TAMS_DEBUG' due to the env_prefix setting.

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # Server settings
 HOST=0.0.0.0
 PORT=8000
-DEBUG=false
+TAMS_DEBUG=false
 
 # VAST Database settings
 VAST_ENDPOINT=http://localhost:9090
@@ -27,5 +27,5 @@ S3_PRESIGNED_URL_DOWNLOAD_TIMEOUT=3600
 S3_TAMS_ROOT=/tams
 
 # Storage API limits
-TAMS_FLOW_STORAGE_DEFAULT_LIMIT=10
-TAMS_SEGMENT_STORAGE_DEFAULT_LIMIT=10
+FLOW_STORAGE_DEFAULT_LIMIT=10
+SEGMENT_STORAGE_DEFAULT_LIMIT=10
